Update settings page

--- a/pages/learn/basics/create-nextjs-app/setup.mdx
+++ b/pages/learn/basics/create-nextjs-app/setup.mdx
@@ -5,13 +5,12 @@ export const meta = {
   courseId: 'basics',
   lessonId: 'create-nextjs-app',
   stepId: 'setup',
-  subtitle: 'Setup',
+  subtitle: 'Setup'
   question: {
     answers: ['Welcome to Next.js!', 'Hello Next.js!'],
     correctAnswer: 'Welcome to Next.js!'
   }
 }
-
 First, let’s make sure that your development environment is ready.
 
 - If you don’t have **Node.js** installed, [install it from here](https://nodejs.org/en/). You’ll need Node.js version **10** or later.
