--- a/pages/learn/basics/deploying-nextjs-app/setup.mdx
+++ b/pages/learn/basics/deploying-nextjs-app/setup.mdx
@@ -15,7 +15,7 @@ export const meta = {
 
 ### Download Starter Code (Optional)
 
-If you’re NOT continuing from the previous lesson, you can download, install, and run the starter code for this lesson below. This will set up a `nextjs-blog` directory such that it’s identical to the result of the previous lesson, and then starts the development server.
+If you’re NOT continuing from the previous lesson, you can download, install, and run the starter code for this lesson below. This sets up a `nextjs-blog` directory such that it’s identical to the result of the previous lesson, and then starts the development server.
 
 Again, this is NOT necessary if you’ve just finished the previous lesson.
 
